<?xml version="1.0"?>
<package format="3">
  <name>patchworkpp</name>
  <version>0.0.0</version>
  <description>ROS2 package for Patchwork++ ground segmentation.</description>

  <maintainer email="sj98lee@kaist.ac.kr">Seungjae Lee</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
