<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_web_tools</name>
  <version>0.1.0</version>
  <description>Utilities for publishing low-bandwidth point clouds to web viewers.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>foxglove_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
